# evolving-agent

./: .coverage  .gitignore  DEBUG_NOTES.md  GAP_ANALYSIS_2026.md  Makefile  README.md  ROADMAP.md  SPEC.md  config.yaml.example  main.py  plan.md  pyproject.toml  requirements-dev.txt  requirements.txt
agent/: __init__.py  agent_reflector.py  approval.py  config.py  config_models.py  context_compressor.py  core.py  embedding.py  emotion.py  events.py  executor.py  kimi_client.py  knowledge_graph.py  learner.py  mcp_client.py  mcp_security.py  mcp_tool_skill.py  memory.py  memory_module.py  mood.py  performance_monitor.py  personality.py  plan.py  planner.py  procedural_memory.py  quality_judge.py  reflector.py  relationship.py  sandbox.py  scheduler.py  semantic_detector.py  session_search.py  signal_learner.py  skill.py  skill_auto.py  skills_builtin.py  structured_output.py  user_context.py  world_state.py
benchmarks/: __init__.py  run.py
bot/: __init__.py  feishu.py  feishu_adapter.py  feishu_approval.py  feishu_event_handler.py  feishu_message.py  feishu_ws_client.py  session_lifecycle.py
docs/: ARCHITECTURE.md  EVALUATION_REPORT_2026.html  EVALUATION_REPORT_2026_v2.html  GAP_ANALYSIS.md  IMPLEMENTATION_PLAN_2026.md  KNOWLEDGE_SYSTEM_V2.md  OPTIMIZATION.md  TEST_REPORT_v4.1.md  TEST_REPORT_v4.md
tests/: MANUAL_TEST.md  TEST_REPORT.md  conftest.py  integration_test.py  mcp_e2e_server.py  test_a2a.py  test_approval.py  test_dev_skills.py  test_e2e_v4.py  test_executor_parallel.py  test_knowledge_advanced.py  test_mcp_e2e.py  test_mcp_security.py  test_phase2.py  (+5 more)
(+99 files in other folders)
